Fix Aphront Filter on mobile
Summary: Some of this CSS causes fake margins on mobile devices. Fixes the margin and widths for consistency.

Test Plan:
Test a number of filter interfaces on iOS, Maniphest, Differential, etc.

{F150024}

Reviewers: btrahan, epriestley

Reviewed By: epriestley

Subscribers: epriestley, Korvin

Differential Revision: https://secure.phabricator.com/D8959

--- a/webroot/rsrc/css/aphront/list-filter-view.css
+++ b/webroot/rsrc/css/aphront/list-filter-view.css
@@ -15,7 +15,7 @@
 }
 
 .device-phone .aphront-list-filter-wrap {
-  margin: 0 -2px;
+  margin: 0 8px;
 }
 
 .aphront-list-filter-view-content .phui-form-view {
@@ -62,9 +62,9 @@
 }
 
 .device .aphront-list-filter-reveal {
-  width: 98%;
+  width: auto;
   margin: auto;
-  padding: 8px;
+  padding: 4px 8px;
 }
 
 .aphront-list-filter-reveal a {
